[tool.poetry]
name = "safelens"
version = "0.1.0"
description = "SafeLens is an AI-powered app that verifies the authenticity of images, detecting whether they are real or artificially generated. It also scans for explicit content, ensuring a safe and secure visual experience."
authors = ["anirudh-srinivasan-99 <anirudhbadri99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
flask = "3.0.0"
configparser = "^7.1.0"
keras = "2.13.1"
opencv-python = "4.8.1.78"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.13.0"
tensorflow-intel = "2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
